[package]
name = "daf"
version = "1.0.1"
edition = "2021"
authors = ["Abhishek Kumar <akbittu@gmail.com>"]
license = "MIT"
description = "Lists the directory and files with or without attributes as opted."
readme = "README.md"
homepage = "https://github.com/isurfer21/daf"
repository = "https://github.com/isurfer21/daf.git"
keywords = ["cli", "dir", "files", "ls", "tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = "3.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
